--- a/src/main/resources/templates/hi.html
+++ b/src/main/resources/templates/hi.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <p th:text="'안녕하세요. ' + ${data}" >안녕하세요. 손님</p>
+<p th:text="'안녕하세요. ' + ${name}" >안녕하세요. 손님</p>
+<p th:text="'안녕하세요. ' + ${age}" >안녕하세요. 손님</p>
 </body>
 </html>
